2026-01-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/devpdf.am (all): Drop unnecessary phony target.

2026-01-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/devpdf.am [HAVE_URW_FONTS]: Shift conditional so
	that we define a target rule for
	`$(devpdffont_descriptions_for_urw)` only if the
	`HAVE_URW_FONTS` Automake variable is defined.

2026-01-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/devpdf.am ($(devpdffont_descriptions_for_urw)):
	Drop interpolations of no-longer-used `DEFAULT_BASE35_FONTS` and
	`URW_BASE35_FONTS` macros.

2026-01-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/doc.am: Abstract "-P-e" option to gropdf into new macro,
	`groffmanpagesoption`.  We can't use it if the build is
	configured without URW fonts to embed, so define the macro only
	if `HAVE_URW_FONTS` _and_ `USE_GROPDF`.
	(doc/groff-man-pages.pdf): Interpolate macro instead of
	hard-coding "-P-e".

2026-01-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/tests/check-default-foundry.sh.in: Die with "hard
	error" if test script cannot locate the "Foundry" file.  Skip
	remainder of test (for fonts not in the PostScript Level 1/PDF
	"base 14") if the "URW" section of the "Foundry" file is absent.

2026-01-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_PERL): Update error messages.  Refer to
	Perl "executable", not "binary"; whether an executable is an
	object file is not our concern.  When failing because the
	available version of Perl is too old, report the minimum version
	we require.

2026-01-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/doc.am: Abstract `-P-W` option to "gropdf" into a new
	macro, `pdfmomoption`, populating it only if, at configuration
	time, both `HAVE_URW_FONTS` and `USE_GROPDF` were enabled.

2026-01-25  G. Branden Robinson <g.branden.robinson@gmail.com>
