@@ -147,13 +147,13 @@ EXTRA_DIST += \
 $(devpdffont_descriptions_from_devps):
 	$(AM_V_at)$(MKDIR_P) $(top_builddir)/font/devpdf
 	$(AM_V_at)for f in $@; do \
-	  cp -f $(top_srcdir)/font/devps/`basename $$f` \
+	  cp -fp $(top_srcdir)/font/devps/`basename $$f` \
 	    $(top_builddir)/font/devpdf; \
 	done
 
 $(devpdffontencdata):
 	$(AM_V_at)$(MKDIR_P) $(top_builddir)/font/devpdf/enc
-	$(AM_V_at)cp -f $(top_srcdir)/font/devps/`basename $@` \
+	$(AM_V_at)cp -fp $(top_srcdir)/font/devps/`basename $@` \
 	  $(top_builddir)/font/devpdf/enc
 
 # The following 2 rules are lame hacks to get around the fact that, but
@@ -163,19 +163,19 @@ $(devpdffontencdata):
 # XXX: Maybe a Make or Automake guru can advise how to improve this.
 
 font/devpdf/SS: $(devpdf_srcdir)/SS.in
-	$(AM_V_GEN)cp -f $(devpdf_srcdir)/SS.in $@
+	$(AM_V_GEN)cp -fp $(devpdf_srcdir)/SS.in $@
 
 $(devpdf_builddir)/symbolsl.afm: \
   $(devpdf_srcdir)/symbolsl.afm.in
-	$(AM_V_GEN)cp -f $(devpdf_srcdir)/symbolsl.afm.in $@
+	$(AM_V_GEN)cp -fp $(devpdf_srcdir)/symbolsl.afm.in $@
 
 $(devpdf_builddir)/symbolsl.pfb: \
   $(devpdf_srcdir)/symbolsl.pfb.in
-	$(AM_V_GEN)cp -f $(devpdf_srcdir)/symbolsl.pfb.in $@
+	$(AM_V_GEN)cp -fp $(devpdf_srcdir)/symbolsl.pfb.in $@
 
 $(devpdffontmapdata):
 	$(AM_V_at)$(MKDIR_P) $(top_builddir)/font/devpdf/map
-	$(AM_V_at)cp -f \
+	$(AM_V_at)cp -fp \
 	  $(top_srcdir)/font/devps/generate/`basename $@` \
 	  $(top_builddir)/font/devpdf/map
 
